[gd_scene load_steps=8 format=3 uid="uid://daxj17mon6ks8"]

[ext_resource type="Script" path="res://planets/mercury/mercury.gd" id="1_hgf0m"]
[ext_resource type="PackedScene" uid="uid://sc8xm7aym51d" path="res://player/player.tscn" id="2_tjwwk"]
[ext_resource type="PackedScene" uid="uid://bc82m3np056ip" path="res://loots/minerals.tscn" id="3_sigxt"]
[ext_resource type="Texture2D" uid="uid://bmxowqwctb54t" path="res://pics/bg/mercury_background.png" id="4_4o30c"]
[ext_resource type="Texture2D" uid="uid://dmwqoxayeudod" path="res://pics/mockup/Red_circle.svg.png" id="4_h77oc"]
[ext_resource type="PackedScene" uid="uid://bob5f2sxvlmc0" path="res://player/player_interface.tscn" id="5_dewnt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1o2uy"]
radius = 30.5941

[node name="mercury" type="Node2D"]
editor_description = "mercury"
script = ExtResource("1_hgf0m")
player = ExtResource("2_tjwwk")
mercury_mineral = ExtResource("3_sigxt")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(584, 327)
texture = ExtResource("4_4o30c")

[node name="spawn_player" type="Marker2D" parent="."]
position = Vector2(692, 243)

[node name="takeoff" type="Area2D" parent="spawn_player" groups=["takeoff"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn_player/takeoff"]
shape = SubResource("CircleShape2D_1o2uy")

[node name="takeoff" type="Sprite2D" parent="spawn_player/takeoff"]
scale = Vector2(0.0833333, 0.0833333)
texture = ExtResource("4_h77oc")

[node name="player_interface" parent="." instance=ExtResource("5_dewnt")]

[connection signal="area_entered" from="spawn_player/takeoff" to="." method="_on_takeoff_area_entered"]
[connection signal="area_exited" from="spawn_player/takeoff" to="." method="_on_takeoff_area_exited"]
